Added content provider, and its methods onCreate() and getType()

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name=".MusicProvider"
+            android:authorities="com.example.karpena2.roomproject.musicprovider"
+            android:enabled="true"
+            android:exported="true"></provider>
     </application>
 
 </manifest>
